# OpenMQTTGateway

./: .all-contributorsrc  .clang-format  .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .memory.swp  .travis.yml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FanRemoteGPIO.cpp  GatewayIR.ino  GatewayRF.ino  ISSUE_TEMPLATE.md  LICENSE.txt  Note for 1technophile.txt  OpenMQTTGateway.ino  README.md  User_config.h  ZactuatorFASTLED.ino  ZactuatorONOFF.ino  ZaddonDHT.ino  Zgateway2G.ino  ZgatewayBT.ino  ZgatewayFASTLED.ino  ZgatewayIR.ino  ZgatewayLORA.ino  ZgatewayPilight.ino  ZgatewayRF.ino  ZgatewayRF2.ino  ZgatewayRF315.ino  ZgatewayRFM69.ino  ZgatewaySRFB.ino  ZmqttDiscovery.ino  Zsensor.cpp  Zsensor.h  ZsensorADC.ino  (+51 more)
lib/ESPiLight/pilight/: .gitignore  CMakeConfig.txt  CMakeLists.txt  CONTRIBUTING.md  README.md  control.c  daemon.c  debug.c  flash.c  raw.c  receive.c  send.c  setup.sh  sha256.c  uuid.c
lib/ESPiLight/pilight/clients/: process.java  process.php  process.pl  process.py  process.py3
lib/ESPiLight/pilight/docs/: make.bat
lib/ESPiLight/pilight/docs/source/: about_manual.rst  adhoc_network.rst  changelog.rst  conf.py  faq.rst  index.rst  installation.rst
lib/ESPiLight/pilight/docs/source/.static/: custom.css  custom.js  font.min.css
lib/ESPiLight/pilight/docs/source/configuration/: devices.rst  example.rst  gui.rst  hardware.rst  index.rst  registry.rst  rules.rst  settings.rst
lib/ESPiLight/pilight/docs/source/development/: api.rst  debugging.rst  index.rst
lib/ESPiLight/pilight/docs/source/electronics/: index.rst  pcb_soldering.rst  wiring.rst
lib/ESPiLight/pilight/docs/source/eventing/: index.rst  operators.rst  syntax.rst
lib/ESPiLight/pilight/docs/source/programs/: control.rst  daemon.rst  debug.rst  flash.rst  index.rst  raw.rst  receive.rst  send.rst  sha256.rst  uuid.rst
lib/ESPiLight/pilight/docs/source/protocols/: index.rst
lib/ESPiLight/pilight/inc/: CMakeLists.txt  defines.h.in  i2c-dev.h
lib/ESPiLight/pilight/libs/: CMakeLists.txt
lib/ESPiLight/pilight/libs/avrdude/: CMakeLists.txt  arduino.c  arduino.h  avr.c  avr.h  avrbitbang.c  avrbitbang.h  avrconfig.c  avrconfig.h  avrdude.h  avrgpio.c  avrgpio.h  avrpart.c  avrpart.h  avrupd.c  avrupd.h  fileio.c  fileio.h  pgm.c  pgm.h  pindefs.h  safemode.c  safemode.h  ser_posix.c  ser_win32.c  serial.h  stk500.c  stk500.h  stk500_private.h
lib/ESPiLight/pilight/libs/libuv/: CMakeLists.txt  threadpool.c  threadpool.patch  uv-bsd.h  uv-threadpool.h  uv.h
lib/ESPiLight/pilight/libs/libuv/unix/: core.c  linux-core.c  posix-poll.c  stream.c
lib/ESPiLight/pilight/libs/openzwave/: Bitfield.h  CMakeLists.txt  Defs.h  DoxygenMain.h  Driver.cpp  Driver.h  Group.cpp  Group.h  Manager.cpp  Manager.h  Msg.cpp  Msg.h  Node.cpp  Node.h  Notification.h  Options.cpp  Options.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h  ZWaveCommandClasses.h  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp  vers.cpp
lib/ESPiLight/pilight/libs/openzwave/aes/: CMakeLists.txt  aes.h  aes_modes.c  aescpp.h  aescrypt.c  aesopt.h  aestab.c  aestab.h  brg_types.h
lib/ESPiLight/pilight/libs/openzwave/command_classes/: Alarm.cpp  Alarm.h  ApplicationStatus.cpp  ApplicationStatus.h  Association.cpp  Association.h  AssociationCommandConfiguration.cpp  AssociationCommandConfiguration.h  Basic.cpp  Basic.h  BasicWindowCovering.cpp  BasicWindowCovering.h  Battery.cpp  Battery.h  CMakeLists.txt  CRC16Encap.cpp  CRC16Encap.h  ClimateControlSchedule.cpp  ClimateControlSchedule.h  Clock.cpp  Clock.h  CommandClass.cpp  CommandClass.h  CommandClasses.cpp  CommandClasses.h  Configuration.cpp  Configuration.h  ControllerReplication.cpp  ControllerReplication.h  DoorLock.cpp  DoorLock.h  DoorLockLogging.cpp  DoorLockLogging.h  EnergyProduction.cpp  EnergyProduction.h  Hail.cpp  Hail.h  Indicator.cpp  Indicator.h  Language.cpp  (+63 more)
lib/ESPiLight/pilight/libs/openzwave/platform/: CMakeLists.txt  Controller.cpp  Controller.h  Event.cpp  Event.h  FileOps.cpp  FileOps.h  Log.cpp  Log.h  Mutex.cpp  Mutex.h  Ref.h  SerialController.cpp  SerialController.h  Stream.cpp  Stream.h  Thread.cpp  Thread.h  TimeStamp.cpp  TimeStamp.h  Wait.cpp  Wait.h
lib/ESPiLight/pilight/libs/openzwave/value_classes/: CMakeLists.txt  Value.cpp  Value.h  ValueBool.cpp  ValueBool.h  ValueButton.cpp  ValueButton.h  ValueByte.cpp  ValueByte.h  ValueDecimal.cpp  ValueDecimal.h  ValueID.h  ValueInt.cpp  ValueInt.h  ValueList.cpp  ValueList.h  ValueRaw.cpp  ValueRaw.h  ValueSchedule.cpp  ValueSchedule.h  ValueShort.cpp  ValueShort.h  ValueStore.cpp  ValueStore.h  ValueString.cpp  ValueString.h
lib/ESPiLight/pilight/libs/pilight/: CMakeLists.txt
lib/ESPiLight/pilight/libs/pilight/config/: CMakeLists.txt  devices.c  devices.h  gui.c  gui.h  hardware.c  hardware.h  registry.c  registry.h  rules.c  rules.h  settings.c  settings.h
lib/ESPiLight/pilight/libs/pilight/core/: CMakeExclude.txt  CMakeLists.txt  arp.c  arp.h  cast.c  cast.h  common.c  common.h  config.c  config.h  datetime.c  datetime.h  dso.c  eventpool.c  eventpool.h  eventpool_structs.h  fcache.c  fcache.h  firmware.c  firmware.h  gc.c  gc.h  http.c  http.h  irq.c  irq.h  json.c  log.c  log.h  mail.c  mail.h  mem.c  network.c  network.h  ntp.c  ntp.h  options.c  options.h  pilight.c  pilight.h  (+20 more)
lib/ESPiLight/pilight/libs/pilight/datatypes/: CMakeLists.txt  stack.c  stack.h
lib/ESPiLight/pilight/libs/pilight/events/: CMakeLists.txt  action.c  action.h  events.c  events.h  function.c  function.h  operator.c  operator.h
lib/ESPiLight/pilight/libs/pilight/hardware/: 433gpio.c  433gpio.h  (+13 more)
lib/ESPiLight/pilight/libs/webgui/: index.html  jquery.mobile-1.4.5.min.css  jquery.mobile-1.4.5.min.js  pilight.css  pilight.jquery.theme.css  pilight.js
lib/ESPiLight/pilight/res/: pilight.pem
lib/ESPiLight/pilight/res/config/: config.json-default  config.json-default-openwrt  config.json-default-w32
lib/ESPiLight/pilight/res/firmware/: pilight_usb_nano.hex
lib/ESPiLight/pilight/res/init/: pilight.initd  pilight.upstart
lib/ESPiLight/pilight/res/win32/: admin.rc  pilight.manifest
(+2144 files in other folders)
